<resources>
    <string name="lang_selected">en</string>
    <string name="app_name">Manappuram OGL-Dev</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="terms"><u>Terms &amp; Conditions</u></string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="lang_english">English</string>
    <string name="lang_hindi">हिंदी</string>
    <string name="lang_malayalam">മലയാളം</string>
    <string name="lang_kannad">ಕನ್ನಡ</string>
    <string name="lang_tamil">தமிழ்</string>
    <string name="lang_telgu">తెలుగు</string>
    <string name="toll_free">(Toll-Free - 24 X 7 hours)</string>
    <string name="toll_free_1">1800-420-22-33 (Toll-Free - 24X7 hours)</string>
    <string name="term_and_cond"><![CDATA[Terms & Conditions]]></string>
    <string name="gram">gm</string>
    <string name="rate_gram">Rate/gm</string>
    <string name="max_amt">You can get max {{rupees}} after settlement</string>
    <string name="above_99">You can get max {{rupees}} after settlement</string>
    <string name="loan_limit_exceed">Entered amount exceeds maximum loan limit.</string>
    <string name="otp_sent_to_mobile_new_loan">An OTP has been sent to your registered mob. +91 @{{number}} towards your loan application.</string>
    <string name="max_net_amount">Max net amount available up to Rs {{rupees}} after adjusting settlement.</string>
    <string name="help_line_no">1800-420-22-33</string>
    <string name="less_then_min_amt">Minimum net amount should be {{rupees}} {{min_loan}}</string>
    <string name="invalid_loan_amt_1">Repledge amount can be {{rupees}}0 or greater then {{rupees}}99</string>
    <string name="circle_orange">#fc6621</string>
    <string name="circle_yellow">#ffc500</string>
    <string name="circle_green">#5aaf00</string>
    <string name="circle_pink">#f924be</string>
    <string name="repledge_success_msg">Your new loan has been successfully confirmed at @{{percent}} interest rate after the rebate against
        your gold inventory and your previous loan has been settled. You will receive the balance amount @{{amount}} directly in your registered bank account.</string>
    <string name="circle_blue">#007aff</string>
    <string name="circle_red">#f60000</string>
    <string name="circle_na">#f4f4f4</string>
    <string name="customer_id">Customer ID</string>
    <string name="terms1" translatable="false">Thanks you for choosing Manappuram Online Gold Lone and welcome to hassle free receipt of loan</string>
    <string name="terms2" translatable="false">Please read eligiility details for Online Gold Loan</string>
    <string name="terms3" translatable="false">ELIGIBILITY</string>
    <string name="terms4" translatable="false">	This facility is limited to existing customers of Manappuram Finance Limited.	Customer should have live  pledge account but the release of Gold ornaments was not done	Customer has to submit valid bank/NEFT document, KYC document and Online Gold Loan Registration Form, and it should be verified by MAFIL officials.</string>
</resources>