<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:background="@android:color/white"
        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/yellow_100"
            android:fontFamily="@font/robotobold"
            android:padding="@dimen/padding_size_12dp"
            android:text="@string/term_and_cond"
            android:textAllCaps="true"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical"
     android:layout_marginStart="10dp"

            android:gravity="center"
            android:paddingTop="@dimen/padding_size_12dp"
            android:paddingEnd="@dimen/padding_size_8dp"
            android:paddingBottom="@dimen/padding_size_12dp"
            android:weightSum="3">
<TextView
    android:layout_width="match_parent"
    android:text="@string/terms1"
    android:textColor="@color/red_100"

    android:fontFamily="@font/robotobold"
    android:layout_marginTop="@dimen/margin_size_10dp"
    android:layout_height="wrap_content"/>
            <TextView

                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/margin_size_10dp"
                android:textSize="14dp"
                android:textColor="@color/black_300"
                android:text="@string/terms2"
                android:fontFamily="@font/roboto"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_width="match_parent"
                android:text="@string/terms3"
                android:textColor="@color/red_100"
                android:textStyle="bold"
                android:fontFamily="@font/roboto"
                android:layout_marginTop="@dimen/margin_size_10dp"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_width="match_parent"
                android:text="@string/terms4"
                android:textSize="14dp"
                android:textColor="@color/black_300"
                android:fontFamily="@font/roboto"
                android:layout_marginTop="@dimen/margin_size_10dp"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="100dp"
                android:text="Done"
                android:id="@+id/terms"
                android:gravity="center"
                android:padding="10dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/red_100"
                android:fontFamily="@font/robotobold"
                android:background="@drawable/curved_yellow"
                android:layout_height="wrap_content"/>

            
        </LinearLayout>


    </LinearLayout>
</RelativeLayout>
