<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/layout_bottom"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorBrandYello"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/customer_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:padding="15dp"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/text_size_19sp"
                    tools:text="Customer Name" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top"
                    android:orientation="horizontal"
                    android:paddingTop="5dp">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/layout_customer_id"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_size_10dp"
                        android:layout_weight="1"
                        android:paddingLeft="15dp"
                        app:hintEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/customer_id"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@null"
                            android:focusable="false"
                            android:hint="@string/customer_id"
                            android:textColor="@color/text_color_nav_header"
                            android:textSize="@dimen/text_size_14sp"
                            tools:text="000123456789" />
                    </com.google.android.material.textfield.TextInputLayout>



                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="20dp"
                    android:background="@color/colorDivider" />
            </LinearLayout>

            <ListView
                android:id="@+id/menu_list_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:choiceMode="singleChoice"
                android:descendantFocusability="blocksDescendants"
                android:scrollbars="none" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal"
            android:paddingLeft="15dp"
            android:paddingTop="20dp"
            android:paddingBottom="20dp">

            <TextView
                android:id="@+id/help_line_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/help_line_no"
                android:textColor="@color/red_100"
                android:textSize="@dimen/text_size_12sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/toll_free"
                android:textSize="@dimen/text_size_12sp" />
        </LinearLayout>
    </RelativeLayout>
</layout>